# pyramid-helloworld

./: .dockerignore  CHANGELOG.md  Dockerfile.alpine  Dockerfile.debian_slim  Justfile  README.md  pyproject.toml
.github/.github/workflows/: tests-artifacts.yml  tests.yml
.github/workflows/: publish-pypi.yml  tests-artifacts.yml  tests.yml
pyramid_helloworld/: __init__.py
scripts/: get_version.py  write_changelog.py
tests/: test_pyramid_helloworld.py
