[project]
name = "pyramid-helloworld"
version = "2.0.5"
description = "Hello World web app using pyramid."
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
license = { text = "BSD-Derived" }
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "plaster-yaml>=2.0.1",
    "pyramid>=1.10, <3",
    "waitress>=2.0.0,<3",
    "webob< 1.8.9; python_version<'3.13'",
    "webob>= 1.8.9; python_version>='3.13'"
]

[project.urls]
Homepage = "https://github.com/mardiros/pyramid-helloworld"
Documentation = "https://github.com/mardiros/pyramid-helloworld/blob/main/README.md"
Repository = "https://github.com/mardiros/pyramid-helloworld.git"
Issues = "https://github.com/mardiros/pyramid-helloworld/issues"
Changelog = "https://github.com/mardiros/pyramid-helloworld/blob/main/CHANGELOG.md"


[dependency-groups]
celery = ["celery >=5.2.7,<6", "celery-yaml[pyramid]>=2.0.0,<3"]
dev = ["pytest >=8.3.3,<9", "pytest-cov >=6.0.0,<7"]

[tool.pdm.build]
includes = ["src", "development.yaml", "development.json", "CHANGELOG.md"]
excludes = ["tests"]

[project.entry-points."paste.app_factory"]
main = "pyramid_helloworld:main"

[project.entry-points."celery_yaml.app"]
main = "pyramid_helloworld.backend:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
